--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,12 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
