--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -29,6 +30,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+	providedRuntime group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '3.1.4'
 }
 
 test {
