--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=gp
-spring.datasource.password=kodilla2023
+spring.datasource.username=kodilla
+spring.datasource.password=kodilla_Pass123
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
