--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 	providedRuntime group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '3.1.4'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 }
 
 test {
