--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,14 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+admin.mail = ktos@gmail.com
+
+play.mailer {
+host = "sandbox.smtp.mailtrap.io"
+port = 2525
+ssl = no
+tls = yes
+user = "23475b2bb3795a"
+password = "6391438e577de8"
+}
