--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 admin.mail = ktos@gmail.com
 
-play.mailer {
-host = "sandbox.smtp.mailtrap.io"
-port = 2525
-ssl = no
-tls = yes
-user = "23475b2bb3795a"
-password = "6391438e577de8"
-}
+#server.error.whitelabel.enabled=false
