--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:3.2.0'
-//	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
+	implementation 'com.google.code.gson:gson'
 }
 
 test {
