--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
 	implementation 'com.google.code.gson:gson'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 test {
