--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,21 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 admin.mail = ktos@gmail.com
 
-#server.error.whitelabel.enabled=false
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+# ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+
+info.administrator.email=john.doe@test.com
+info.administrator.address.street=Super Cool Street
+info.administrator.address.number=42
+
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=tasks@crud.com
+info.company.phone=744489230
